# wht_backend

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  app.rc  compile_commands.json  datapage.cpp  datapage.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newdevice.cpp  newdevice.h  newdevice.ui  slavedevice.cpp  slavedevice.h  slavepage.cpp  slavepage.h  udpmanager.cpp  udpmanager.h  wht_backend.pro
protocol/: backend2master.cpp  backend2master.h  messagebase.h  packetbase.cpp  packetbase.h  protocol.cpp  protocol.h  slave2backend.cpp  slave2backend.h
